[gd_scene load_steps=11 format=3 uid="uid://c3bqttnsy2q48"]

[ext_resource type="Theme" uid="uid://cl6g0lyje5r7f" path="res://Assets/start_menu.tres" id="1_mu0kb"]
[ext_resource type="Texture2D" uid="uid://ko77v8acvw0w" path="res://Assets/backgrounds/1.jpg" id="2_kblhk"]
[ext_resource type="Script" path="res://Scripts/StartMenu.gd" id="2_wr84n"]
[ext_resource type="Script" path="res://Scripts/TextureRect.gd" id="3_bm8u0"]
[ext_resource type="Texture2D" uid="uid://b8buud0wegqkv" path="res://Assets/backgrounds/2.jpg" id="4_vi1al"]
[ext_resource type="Texture2D" uid="uid://4pcsf80pmttw" path="res://Assets/backgrounds/3.jpg" id="5_3ayat"]
[ext_resource type="Texture2D" uid="uid://dief32ln0vacy" path="res://Assets/backgrounds/4.jpg" id="6_5y8x3"]

[sub_resource type="Animation" id="Animation_2ht1w"]
resource_name = "Exit Start Menu"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("TextureRect:modulate")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1.51572),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Darken:color")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0, 0, 0, 0.384314), Color(0, 0, 0, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("CenterContainer:position")
tracks/2/interp = 2
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.4, 1),
"transitions": PackedFloat32Array(0.615572, 0.707107, 1),
"update": 0,
"values": [Vector2(174.696, 255.96), Vector2(300, 255.96), Vector2(-250, 255.96)]
}

[sub_resource type="Animation" id="Animation_52475"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("TextureRect:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Darken:color")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0, 0, 0, 0.384314)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("CenterContainer:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(174.696, 255.96)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_7w3yd"]
_data = {
"Exit Start Menu": SubResource("Animation_2ht1w"),
"RESET": SubResource("Animation_52475")
}

[node name="StartMenu" type="Control"]
process_mode = 3
process_priority = -1
top_level = true
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_mu0kb")
script = ExtResource("2_wr84n")

[node name="ReferenceRect" type="ReferenceRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
border_width = 6.0
editor_only = false
metadata/_edit_lock_ = true
metadata/_edit_group_ = true

[node name="TextureRect" type="TextureRect" parent="."]
texture_filter = 1
texture_repeat = 3
clip_contents = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(576, 324)
theme = ExtResource("1_mu0kb")
texture = ExtResource("2_kblhk")
script = ExtResource("3_bm8u0")
pictures = [ExtResource("2_kblhk"), ExtResource("4_vi1al"), ExtResource("5_3ayat"), ExtResource("6_5y8x3")]

[node name="Darken" type="ColorRect" parent="."]
texture_filter = 3
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_mu0kb")
color = Color(0, 0, 0, 0.384314)

[node name="CenterContainer" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = 174.696
offset_top = 255.96
offset_right = 1000.7
offset_bottom = 601.96
grow_horizontal = 2
grow_vertical = 0
theme = ExtResource("1_mu0kb")
metadata/_edit_use_anchors_ = true

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 2.95

[node name="PanelContainerU" type="GridContainer" parent="CenterContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 2.3

[node name="PlayButton" type="Button" parent="CenterContainer/VBoxContainer"]
custom_minimum_size = Vector2(200, 90)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource("1_mu0kb")
theme_override_font_sizes/font_size = 40
text = "ИГРАТ
"

[node name="PanelContainerM" type="GridContainer" parent="CenterContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 1.21

[node name="QuitButton" type="Button" parent="CenterContainer/VBoxContainer"]
custom_minimum_size = Vector2(200, 90)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource("1_mu0kb")
theme_override_font_sizes/font_size = 40
text = "А КАК ВЫЙТИ"

[node name="PanelContainerB" type="Container" parent="CenterContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 1.4

[node name="PanelContainer" type="Container" parent="CenterContainer"]
custom_minimum_size = Vector2(600, 0)
layout_mode = 2
size_flags_horizontal = 2

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_7w3yd")
}

[connection signal="pressed" from="CenterContainer/VBoxContainer/PlayButton" to="." method="_on_play_button_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/QuitButton" to="." method="_on_quit_button_pressed"]
